--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "index.js"
   ],
   "scripts": {
+    "build": "tsc",
     "setup": "yarn install && yarn allow-scripts",
     "test": "mocha",
     "lint:eslint": "eslint . --cache --ext js,ts",
@@ -35,9 +36,10 @@
   "dependencies": {
     "@bitgo/blake2b": "^3.0.1",
     "@ethereumjs/tx": "^3.1.4",
+    "@trezor/rollout": "^1.2.0",
     "ethereumjs-util": "^7.0.9",
     "hdkey": "0.8.0",
-    "trezor-connect": "8.1.23-extended"
+    "trezor-connect": "^8.1.26"
   },
   "devDependencies": {
     "@ethereumjs/common": "^2.2.0",
@@ -58,7 +60,8 @@
     "mocha": "^5.0.4",
     "prettier": "^2.3.0",
     "prettier-plugin-packagejson": "^2.2.12",
-    "sinon": "^9.2.3"
+    "sinon": "^9.2.3",
+    "typescript": "^4.4.4"
   },
   "engines": {
     "node": ">=12.0.0"
