--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "license": "ISC",
   "author": "Bruno Barbieri",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
     "index.js"
   ],
