--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
-  "exclude": ["./node_modules", "test", "dist"],
+  "exclude": ["./node_modules", "test", "dist"]
 }
