--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "mocha/mkdirp": "^0.5.1"
   },
   "dependencies": {
-    "@ethereumjs/tx": "4",
-    "@ethereumjs/util": "^8.0.3",
+    "@ethereumjs/tx": "3",
     "@metamask/eth-sig-util": "5",
     "@trezor/connect-plugin-ethereum": "^9.0.1",
     "@trezor/connect-web": "^9.0.6",
+    "ethereumjs-util": "^7.1.5",
     "hdkey": "0.8.0"
   },
   "devDependencies": {
-    "@ethereumjs/common": "^3.0.2",
+    "@ethereumjs/common": "2",
     "@lavamoat/allow-scripts": "^1.0.6",
     "@metamask/auto-changelog": "^2.3.0",
     "@metamask/eslint-config": "^8.0.0",
