--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rabby-wallet/eth-trezor-keyring",
-  "version": "2.5.0-beta.4",
+  "version": "2.5.0",
   "description": "A RabbyHub compatible keyring, for trezor hardware wallets",
   "keywords": [
     "ethereum",
