--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
-    "declaration": true
+    "declaration": false
   },
   "exclude": ["./node_modules", "test", "dist"]
 }
